fixed toolbar on iphone

--- a/www/ui/stylesheets/common.css
+++ b/www/ui/stylesheets/common.css
@@ -44,8 +44,6 @@ footer.buttons .PriorityChooser { bottom: 45px; }
 
 
 .Toolbar { list-style: none; display: -webkit-box; -webkit-box-orient: horizontal; -webkit-box-align: stretch; -webkit-box-pack: justify }
-	.Toolbar li { padding: 0 15px; } 
-	.Toolbar li .Icon { } 
 	.Toolbar .star, .Toolbar .incomplete, .Toolbar .complete { opacity: .2 }
 	.Toolbar .current { opacity: 1 }
 	.Toolbar button { /*-webkit-transition: opacity .5s ease-in-out;*/ }
@@ -105,6 +103,7 @@ footer.buttons .PriorityChooser { bottom: 45px; }
 	#AddTask .Modal { -webkit-border-radius: 0; padding: 0; margin: 0}
 	#AddScribble { border: 0; }
 	#AddTask .buttons .Icon.priority { margin-top: 10px; } 
+	#AddTask .buttons .Icon { margin-top: 0; } 
 
 	.TaskList li { height: 175px; }
 	.TaskList .complete { left: 60px; }
